--- a/app/build.gradle
+++ b/app/build.gradle
@@ -69,6 +69,8 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
     implementation 'androidx.activity:activity-compose:1.5.1'
 
+    implementation "org.jetbrains.kotlinx:kotlinx-serialization-json:1.4.1"
+    implementation 'com.squareup.okhttp3:okhttp:4.9.3'
 
     // Import the Compose BOM
     // get libraries here: https://developer.android.com/jetpack/compose/setup#bom-version-mapping
